k8s/ingress-controller/ingress-cloud.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: eshop
    component: frontend
  name: eshop-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: basket
          servicePort: 80
        path: /basket-api(/|$)(.*)
      - backend:
          serviceName: ingress-demo
          servicePort: 80
        path: /hello-world-two(/|$)(.*)
      - backend:
          serviceName: catalog
          servicePort: 80
        path: /catalog-api(/|$)(.*)
      - backend:
          serviceName: identity
          servicePort: 80
        path: /identity(/|$)(.*)
