k8s/ingress-controller/ingress-local.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: eshop
    component: frontend
  name: eshop-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /basket-api
        backend:
          serviceName: basket
          servicePort: 80
      - path: /catalog-api
        backend:
          serviceName: catalog
          servicePort: 80
      - path: /orders-api
        backend:
          serviceName: ordering
          servicePort: 80
      - path: /identity
        backend:
          serviceName: identity
          servicePort: 80
      - path: /mapuser-mvc
        backend:
          serviceName: mapusermvc
          servicePort: 80
      - path: /web-mvc
        backend:
          serviceName: webmvc
          servicePort: 80
      - path: /webhooks-client
        backend:
          serviceName: webhookclient
          servicePort: 80
      - path: /webhooks-api
        backend:
          serviceName: webhooksapi
          servicePort: 80
      - path: /webshoppingagg
        backend:
          serviceName: webshoppingagg
          servicePort: 80
      - path: /webshoppingapigw
        backend:
          serviceName: ocelotapigw-ws
          servicePort: 80
